--- a/silver_line.html
+++ b/silver_line.html
@@ -3,10 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Silver Line</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
-
+    <title>Silver line</title>
+<style>
         body {
             background-color: #1a1a2e;
             margin: 0;
